03.business-os/AICompanyManager/900.meta/fix_v2_old_legacy_company_id_guard_20260430_103225/030_verify.txt
[PASS] PERSONA_DATABASE_URL is set
[PASS] APP_ROOT exists
[PASS] server file exists
[PASS] target JS exists
[PASS] index.html exists
[PASS] backups created
v2 old legacy company_id guard patched
PATCH_CODE=0
[PASS] v2 old legacy company_id guard patch applied
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/server/aicm-local-ui-api-server.mjs:785
\nfunction _aicmV2ProdHandle(req, res) {
^

SyntaxError: Invalid or unexpected token
    at checkSyntax (node:internal/main/check_syntax:72:5)

Node.js v24.14.1
SERVER_NODE_CHECK_CODE=1
[FAIL] server node --check failed
[WARN] server restored from backup
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/phase-de-dh-workflow-final-local-ui.js:5937
\n/* AICM_V2_OLD_LEGACY_COMPANY_ID_GUARD_AMR_AMU_V1 */\n
^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
TARGET_JS_NODE_CHECK_CODE=1
[FAIL] target JS node --check failed
[WARN] target JS and index restored from backup
[FAIL] v2 legacy id guard marker missing
[WARN] server safe error marker not found
[WARN] index cache bust marker not found
[WARN] old local UI server killed
SERVER_PID=19301
[PASS] server restart attempted
CONTEXT_CURL_CODE=0
CONTEXT_HTTP_CODE=200
[PASS] v2 context endpoint HTTP 200
[PASS] v2 context result ok
